# energy-aware-simulator

./: .gitignore  CMakeLists.txt  log  pseudo-code  tmp.json
dashboard/: all-in-one_ea.json  all-in-one_fifo.json  genome_10ch_100k_ea-2.json  genome_10ch_100k_ea.json  genome_10ch_100k_fifo.json  genome_20ch_250k_ea.json  genome_20ch_250k_fifo.json  pagerank_ea.json  pagerank_fifo.json  sort_ea.json  sort_fifo.json  terasort_ea.json  terasort_fifo.json  test_ea.json  test_fifo.json
evaluation/: big_platform.xml  platform-2.xml  platform-3.xml  platform.xml
scripts/: analyzer.py  convert_workflow.py  test.txt
src/: .EnergyAwareSimulator.cpp.swp  EnergyAwareSimulator.cpp  EnergyAwareStandardJobScheduler.cpp  EnergyAwareStandardJobScheduler.h  EnergyMeter.cpp  EnergyMeter.h  GreedyWMS.cpp  GreedyWMS.h
src/cluster_info/: ClusterInfo.h  HostInfo.cpp  HostInfo.h
src/scheduling_algorithm/: EnRealAlgorithm.cpp  EnergyAwareAlgorithm.cpp  EnergyAwareAlgorithm.h  FifoAlgorithm.cpp  FifoAlgorithm.h  IOAwareAlgorithm.cpp  SPSSEBAlgorithm.cpp
src/utils/: ClusterInfo.cpp  ClusterInfo.h  DAG.cpp  DAG.h  Executor.cpp  Executor.h  Executors.cpp  Executors.h  Hosts.cpp  Hosts.h  Task.cpp  Task.h
workloads/: 1000genome-chameleon-20ch-250k-001.json  100_genome_10ch_100k.json  100_genome_20ch_250k.json  all-in-one.json  pagerank-2.json  pagerank.json  sort-2.json  sort.json  terasort.json  wordcount.json
workloads/tests/: 10_task.json  11_task.json  12_task.json  1_task.json  2_task.json  3_task.json  4_task.json  5_task.json  6_task.json  7_task.json  8_task.json  9_task.json  test.json
